@@ -74,6 +74,7 @@ struct Graphics {
 
   Font *createFont(int style, int size);
   void deleteFont(Font *font);
+  void drawEllipse(int xc, int yc, int rx, int ry, int fill);
   void drawImageRegion(Canvas *src, const MAPoint2d *dstPoint, const MARect *srcRect);
   void drawLine(int startX, int startY, int endX, int endY);
   void drawPixel(int posX, int posY);
@@ -89,6 +90,8 @@ struct Graphics {
   MAExtent getTextSize(const char *str, int len);
   int getHeight() { return _screen->_h; }
   int getWidth() { return _screen->_w; }
+  void set4Line(int x, int y, int xc, int yc);
+  void set4Pixel(int x, int y, int xc, int yc);
   void setClip(int x, int y, int w, int h);
   void setColor(pixel_t color) { _drawColor = color; }
   void setFont(Font *font) { _font = font; }
