@@ -1,3 +1,6 @@
+2017-01-25 (0.12.9)
+	UI: improved CIRCLE performance
+
 2017-01-21 (0.12.9)
 	COMMON: allow array access via [] characters
 
